@@ -7,7 +7,7 @@
 ;;	Christian Faulhammer <opfer@gentoo.org>
 ;;	Ulrich Müller <ulm@gentoo.org>
 ;; Maintainer: <emacs@gentoo.org>
-;; Version: 1.9_pre
+;; Version: 1.10_pre
 ;; Keywords: languages, processes
 
 ;; This file is free software: you can redistribute it and/or modify
